# Vulkan-Abstraction

./: .gitignore  CMakeLists.txt  DebugReport.cpp  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  QueueFamilyIndices.h  main.cpp  read.h
VkCore/: CommandBuffers.h  CommandPool.cpp  CommandPool.h  DebugReport.cpp  DebugReport.h  Fences.h  Instance.cpp  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Queue.cpp  Queue.h  Semaphores.h  ShaderModule.cpp  ShaderModule.h
VkHelpers/: QueueFamilyIndices.h
compute/: CMakeLists.txt  main.cpp
compute/VkCore/: CommandBuffers.h  Fences.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Queue.h  Semaphores.h  ShaderModule.cpp  ShaderModule.h
dependencies/lib/glfw/: glfw.lib  libglfw.so.3.2
glm/: CMakeLists.txt
glm/include/glm/gtx/: gtx - Shortcut.lnk
vulkan/: CMakeLists.txt
vulkan/linux/source/glslang/Test/: 400.geom  spv.400.frag
vulkan/linux/source/layer_factory/: layer_factory.cpp  layer_factory.h
vulkan/linux/source/layers/: api_dump.cpp  api_dump_html.h  api_dump_text.h  object_tracker.cpp  parameter_validation.cpp  spirv_tools_commit_id.h  thread_check.h  unique_objects_wrappers.h  vk_enum_string_helper.h  vk_extension_helper.h  vk_safe_struct.cpp  vk_safe_struct.h  vk_typemap_helper.h
vulkan/linux/x86_64/etc/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_assistant_layer.json  VkLayer_core_validation.json  VkLayer_device_simulation.json  VkLayer_monitor.json  VkLayer_object_tracker.json  VkLayer_parameter_validation.json  VkLayer_screenshot.json  VkLayer_threading.json  VkLayer_unique_objects.json  VkLayer_vktrace_layer.json
vulkan/macos/: VERSIONS.txt
vulkan/macos/macOS/Frameworks/vulkan.framework/Versions/A/: vulkan
vulkan/macos/macOS/etc/vulkan/explicit_layer.d/: VkLayer_core_validation.json  VkLayer_object_tracker.json  VkLayer_parameter_validation.json  VkLayer_threading.json  VkLayer_unique_objects.json
vulkan/macos/macOS/lib/: libSPIRV-Tools-shared.dylib  libVkLayer_utils.dylib  libvulkan.dylib
vulkan/macos/macOS/lib/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc
