cmake_minimum_required(VERSION 3.11)
project(vulkan VERSION 1.0.0 DESCRIPTION "BouwnLaw's attempt at Vulkan" LANGUAGES CXX)

add_library(vulkan STATIC IMPORTED GLOBAL)

if(WIN32)
	target_include_directories(vulkan INTERFACE win32/Include)
	if (CMAKE_SIZEOF_VOID_P EQUAL 8)
		set_target_properties(vulkan PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/win32/Lib/vulkan-1.lib")
	else ()
		set_target_properties(vulkan PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/win32/Lib32/vulkan-1.lib")
	endif ()
elseif(APPLE)
	target_include_directories(vulkan INTERFACE macos/macOS/include)
	set_target_properties(vulkan PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/macos/macOS/lib/libvulkan.1.1.77")
else()
	target_include_directories(vulkan INTERFACE linux/x86_64/include)
	if (CMAKE_SIZEOF_VOID_P EQUAL 8)
		set_target_properties(vulkan PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/linux/x86_64/lib/libvulkan.so.1.1.77")
	else ()
		set_target_properties(vulkan PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/linux/source/lib/libvulkan.so.1.1.77")
	endif ()
endif()
